@@ -6,6 +6,7 @@
 - NEW: Inclusion of Ivy related schemas into the Eclipse XML Catalog (IVYDE-190) (thanks to Miguel Griffa)
 
 - FIX: "Ivy Settings Path" Browse button results in an incorrectly formatted URL (IVYDE-191) (thanks to Jon Schneider)
+- FIX: Workspace Resolver Prevents Source Download (IVYDE-188) (thanks to Phillip Webb)
 
   version 2.0.0 final
 ==========================
